// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Renders default empty state 1`] = `
<styled.div
  className="ihr-empty-state"
  data-component-type="empty_state"
>
  <div
    className="ihr-primary-message"
  >
    Oops... We couldn't find anything for this section.
  </div>
  <div
    className="ihr-secondary-message"
  >
    Please speak to your system admin or add information.
  </div>
</styled.div>
`;

exports[`EmptyState Renders successfully with both primaryMessage, secondaryMessage and buttonComponent 1`] = `
<styled.div
  className="ihr-empty-state"
  data-component-type="empty_state"
>
  <div
    className="ihr-primary-message"
  >
    This is a primary message
  </div>
  <div
    className="ihr-secondary-message"
  >
    This is a secondary message
  </div>
  <LinkButton
    anchorComponentProps={
      Object {
        "useReactRouter": false,
      }
    }
    disabled={false}
    hasLegacyMargins={false}
    href="www.google.com.au"
    iconAlignment="left"
    showSpinner={false}
    size="small"
    type="neutral"
  >
    Add Address
  </LinkButton>
</styled.div>
`;

exports[`EmptyState Renders successfully with null messages 1`] = `
<styled.div
  className="ihr-empty-state"
  data-component-type="empty_state"
/>
`;

exports[`EmptyState Renders successfully with primaryMessage only 1`] = `
<styled.div
  className="ihr-empty-state"
  data-component-type="empty_state"
>
  <div
    className="ihr-primary-message"
  >
    This is a primary message
  </div>
  <div
    className="ihr-secondary-message"
  >
    Please speak to your system admin or add information.
  </div>
</styled.div>
`;

exports[`EmptyState Renders successfully with secondaryMessage only 1`] = `
<styled.div
  className="ihr-empty-state"
  data-component-type="empty_state"
>
  <div
    className="ihr-primary-message"
  >
    Oops... We couldn't find anything for this section.
  </div>
  <div
    className="ihr-secondary-message"
  >
    This is a secondary message
  </div>
</styled.div>
`;
